<resources>
    <string name="app_name">Geekbrains-android-introduction-homework</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="inverse">+|-</string>
    <string name="_clear">C</string>
    <string name="_parentheses">()</string>
    <string name="_division">/</string>
    <string name="_multiplication">x</string>
    <string name="_subtraction">-</string>
    <string name="_addition">+</string>
    <string name="_computation">=</string>
    <string name="button_font">sans-serif-light</string>
    <string name="button_font_night">serif-light</string>
    <string name="backspace"><![CDATA[<<]]></string>
    <string name="toggle_theme_original_string">Оригинальная</string>
    <string name="settings_title_string">Тема приложения</string>
    <string name="toggle_theme_white_string">Альтернативная</string>
    <string name="button_settings_text">...</string>
</resources>
