<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/background">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_clear"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_backspace"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_backspace"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/backspace"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_parentheses"
        app:layout_constraintStart_toEndOf="@id/button_clear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_parentheses"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_parentheses"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_division"
        app:layout_constraintStart_toEndOf="@id/button_backspace"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_division"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_division"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_multiplication"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_parentheses"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_7"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_8"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@id/button_backspace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_9"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_multiplication"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@id/button_parentheses" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiplication"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_multiplication"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_subtraction"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@id/button_division" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_4"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_5"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_6"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_subtraction"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_subtraction"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_subtraction"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_addition"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_multiplication" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_1"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_inversion"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_2"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toBottomOf="@id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_3"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_addition"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toBottomOf="@id/button_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_addition"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_addition"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@id/button_result"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@id/button_subtraction" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_inversion"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/inverse"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_0"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_point"
        app:layout_constraintStart_toEndOf="@id/button_inversion"
        app:layout_constraintTop_toBottomOf="@id/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_point"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_result"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@id/button_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_result"
        style="@style/calculator_main_keyboard_button"
        android:text="@string/_computation"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@id/button_addition" />
</androidx.constraintlayout.widget.ConstraintLayout>