<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/background">

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/button_font"
        android:text="@string/settings_title_string"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggle_theme_original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/button_font"
        android:textColor="@color/white"
        android:textOff="@string/toggle_theme_original_string"
        android:textOn="@string/toggle_theme_original_string"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/toggle_theme_white"
        app:layout_constraintTop_toBottomOf="@id/setting_title"
        app:layout_constraintVertical_bias="0.05" />

    <ToggleButton
        android:id="@+id/toggle_theme_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/button_font"
        android:textColor="@color/white"
        android:textOff="@string/toggle_theme_white_string"
        android:textOn="@string/toggle_theme_white_string"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/toggle_theme_original"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_title"
        app:layout_constraintVertical_bias="0.05" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_settings_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/button_font"
        android:text="Назад"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>